--- a/package.xml
+++ b/package.xml
@@ -10,12 +10,9 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>rclcpp</depend>
 
-  <depend>adore_dynamics_conversions</depend>
-  <depend>adore_map_conversions</depend>
-
-  <depend>sensor_msgs</depend>
-
-  <depend>adore_ros2_msgs</depend>
+  <build_depend>adore_dynamics_conversions</build_depend>
+  <build_depend>adore_map_conversions</build_depend>
+  <build_depend>adore_ros2_msgs</build_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
