--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,9 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>adore_planning</depend>
-
+  <depend>ament_index_cpp</depend>
+  <depend>yaml_cpp_vendor</depend>
+  <depend>yaml-cpp</depend>
 
 
   <build_depend>adore_dynamics_conversions</build_depend>
