remove logging, add simple test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,46 +16,11 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# -------------------------
 # Dependencies
-find_package(ament_cmake REQUIRED)
-find_package(ament_index_cpp REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclcpp_components REQUIRED)
-find_package(adore_math REQUIRED)
-find_package(adore_map REQUIRED)
-find_package(adore_planning REQUIRED)
-find_package(adore_ros2_msgs REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(tf2 REQUIRED)
-find_package(tf2_ros REQUIRED)
-find_package(tf2_geometry_msgs REQUIRED)
-find_package(adore_dynamics_conversions REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(yaml_cpp_vendor REQUIRED)
-find_package(yaml-cpp REQUIRED)  # provides the CMake target 'yaml-cpp'
-
-# Add additional adore_* or ROS 2 dependencies if needed
-
-# Executable node
-add_executable(${PROJECT_NAME}
-  src/main.cpp
-  src/decision_maker.cpp
-  src/decision_publisher.cpp
-
-  src/behaviours.cpp
-  src/domain.cpp
-  src/conditions.cpp
-  src/rules.cpp
-
-)
-
-target_include_directories(${PROJECT_NAME}
-  PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-)
-
-ament_target_dependencies(${PROJECT_NAME}
+# -------------------------
+set(PROJECT_DEPS
+  ament_cmake
   ament_index_cpp
   rclcpp
   rclcpp_components
@@ -69,47 +34,61 @@ ament_target_dependencies(${PROJECT_NAME}
   tf2_geometry_msgs
   adore_dynamics_conversions
   sensor_msgs
-  yaml-cpp
   yaml_cpp_vendor
+  yaml-cpp
 )
-target_link_libraries(${PROJECT_NAME} yaml-cpp)
+
+foreach(pkg IN LISTS PROJECT_DEPS)
+  find_package(${pkg} REQUIRED)
+endforeach()
+
+function(configure_target tgt)
+  target_include_directories(${tgt}
+    PRIVATE
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+      $<INSTALL_INTERFACE:include>
+  )
+  ament_target_dependencies(${tgt} ${PROJECT_DEPS})
+  target_link_libraries(${tgt} ${YAML_CPP_LIBRARIES})
+endfunction()
+
+# -------------------------
+# Sources
+# -------------------------
+set(CORE_SRC
+  src/decision_maker.cpp
+  src/decision_node.cpp
+  src/behaviours.cpp
+  src/domain.cpp
+  src/conditions.cpp
+  src/rules.cpp
+)
+
+# -------------------------
+# Executable node
+# -------------------------
+add_executable(${PROJECT_NAME}
+  src/main.cpp
+  ${CORE_SRC}
+)
+configure_target(${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME}
   DESTINATION lib/${PROJECT_NAME}
 )
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/rules.yaml
-        DESTINATION share/${PROJECT_NAME}/config)
+  DESTINATION share/${PROJECT_NAME}/config
+)
 
+# -------------------------
 # Component library (without main)
+# (kept minimal to match original behavior)
+# -------------------------
 add_library(${PROJECT_NAME}_component SHARED
   src/decision_maker.cpp
 )
-
-target_include_directories(${PROJECT_NAME}_component
-  PRIVATE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-)
-
-ament_target_dependencies(${PROJECT_NAME}_component
-  ament_index_cpp
-  rclcpp
-  rclcpp_components
-  adore_math
-  adore_map
-  adore_planning
-  adore_ros2_msgs
-  std_msgs
-  tf2
-  tf2_ros
-  tf2_geometry_msgs
-  adore_dynamics_conversions
-  sensor_msgs
-  yaml_cpp_vendor
-  yaml-cpp
-)
-target_link_libraries(${PROJECT_NAME}_component yaml-cpp)
+configure_target(${PROJECT_NAME}_component)
 
 rclcpp_components_register_node(${PROJECT_NAME}_component
   PLUGIN "adore::DecisionMaker"
@@ -122,7 +101,17 @@ install(TARGETS ${PROJECT_NAME}_component
   RUNTIME DESTINATION bin
 )
 
+# -------------------------
+# Tests
+# -------------------------
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+
+  ament_add_gtest(decision_maker_rules_tests
+    test/test_rules_selection.cpp
+    ${CORE_SRC}
+  )
+  configure_target(decision_maker_rules_tests)
+endif()
+
 ament_package()
-
-
-
