Feature/improved structure (#10)
* Sync to min_adore_repo - auto generated commit

* example with multi agent solver planning

* remove unecessary files

* refactor decision maker separating states, conditions, transitions, behaviours and io

* separation of concerns now working well

* publish participant

* pass planning parameters through decision maker to planner

* nicer implementation of conditions and behaviour matching

* update traffic participant topic

* add comfort settings

* make vehicle model and comfort settings shared

* allow setting topics from launch

* remove warnings

* improved structure

* move away from bit mask to yaml

* further separate concerns

* further tidy

* update dependencies

* update readme

* update diagram

* update diagram

* update diagram

* update diagram

* remove logging, add simple test

* properly remove logger code remnants

* clean up

* add info to decision maker header

* remove makefile

* remove node status dependence for now

* update licence headers

* minor update for renamed route member

* improve decision maker building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,13 @@
 cmake_minimum_required(VERSION 3.8)
+project(decision_maker VERSION 0.1.0 LANGUAGES CXX)
 
-get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-string(TOLOWER ${CURRENT_DIR_NAME} PROJECT)
-project(${PROJECT})
-
-include($ENV{SOURCE_DIRECTORY}/libraries/adore_libraries.cmake)
-
-include(requirements.cmake)
+# C++20 strict mode
 set(CMAKE_CXX_STANDARD 20)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-# Ensure the Release build uses -O3 for optimization
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
+# Build flags
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
   add_compile_options(-O3)
 endif()
@@ -20,32 +16,117 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-add_executable(${PROJECT} src/main.cpp src/decision_maker.cpp)
-
-target_include_directories(${PROJECT} PRIVATE
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>
+# -------------------------
+# Dependencies
+# -------------------------
+set(PROJECT_DEPS
+  ament_cmake
+  ament_index_cpp
+  rclcpp
+  rclcpp_components
+  adore_math
+  adore_map
+  adore_planning
+  adore_ros2_msgs
+  std_msgs
+  tf2
+  tf2_ros
+  tf2_geometry_msgs
+  adore_dynamics_conversions
+  sensor_msgs
+  yaml_cpp_vendor
+  yaml-cpp
 )
 
-add_all_target_include_directories(${PROJECT})
-add_all_target_link_libraries(${PROJECT})
+foreach(pkg IN LISTS PROJECT_DEPS)
+  find_package(${pkg} REQUIRED)
+endforeach()
 
-install(TARGETS
-    ${PROJECT}
-  DESTINATION lib/${PROJECT}
+# Common include dirs
+function(configure_target_common tgt)
+  target_include_directories(${tgt}
+    PRIVATE
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+      $<INSTALL_INTERFACE:include>
+  )
+endfunction()
+
+# -------------------------
+# Sources
+# -------------------------
+set(CORE_SRC
+  src/decision_maker.cpp
+  src/decision_publisher.cpp
+  src/behaviours.cpp
+  src/domain.cpp
+  src/conditions.cpp
+  src/rules.cpp
 )
 
-add_library(decisionmaker_component SHARED src/decision_maker.cpp)
-add_all_target_include_directories(decisionmaker_component)
-add_all_target_link_libraries(decisionmaker_component)
-rclcpp_components_register_node(
-  decisionmaker_component
+# -------------------------
+# Core OBJECT library
+# -------------------------
+add_library(decision_maker_core OBJECT
+  ${CORE_SRC}
+)
+configure_target_common(decision_maker_core)
+ament_target_dependencies(decision_maker_core ${PROJECT_DEPS})
+
+# -------------------------
+# Executable node
+# -------------------------
+add_executable(${PROJECT_NAME}
+  src/main.cpp
+  $<TARGET_OBJECTS:decision_maker_core>
+)
+configure_target_common(${PROJECT_NAME})
+ament_target_dependencies(${PROJECT_NAME} ${PROJECT_DEPS})
+target_link_libraries(${PROJECT_NAME} ${YAML_CPP_LIBRARIES})
+
+install(TARGETS ${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/rules.yaml
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
+# -------------------------
+# Component library (without main)
+# -------------------------
+add_library(${PROJECT_NAME}_component SHARED
+  $<TARGET_OBJECTS:decision_maker_core>
+)
+configure_target_common(${PROJECT_NAME}_component)
+ament_target_dependencies(${PROJECT_NAME}_component ${PROJECT_DEPS})
+target_link_libraries(${PROJECT_NAME}_component ${YAML_CPP_LIBRARIES})
+
+rclcpp_components_register_node(${PROJECT_NAME}_component
   PLUGIN "adore::DecisionMaker"
   EXECUTABLE decisionmaker
 )
-install(TARGETS decisionmaker_component
+
+install(TARGETS ${PROJECT_NAME}_component
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
 )
+
+# -------------------------
+# Tests
+# -------------------------
+if(BUILD_TESTING)
+  find_package(ament_cmake_gtest REQUIRED)
+
+  ament_add_gtest(decision_maker_rules_tests
+    test/test_rules_selection.cpp
+  )
+  configure_target_common(decision_maker_rules_tests)
+  ament_target_dependencies(decision_maker_rules_tests ${PROJECT_DEPS})
+  target_link_libraries(decision_maker_rules_tests
+    ${PROJECT_NAME}_component
+    ${YAML_CPP_LIBRARIES}
+  )
+endif()
+
 ament_package()
